Path.of() inseat of Paths.get()