@@ -18,10 +18,9 @@ package smile.vision.transform;
 
 import java.io.IOException;
 import java.awt.Image;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import javax.imageio.ImageIO;
 import org.junit.jupiter.api.*;
-
 import static org.junit.jupiter.api.Assertions.*;
 import static smile.deep.tensor.Index.*;
 
@@ -53,7 +52,7 @@ public class TransformTest {
     @Test
     public void test() throws IOException {
         var t = Transform.classification(384, 384);
-        var img = ImageIO.read(Paths.get("deep/src/test/resources/data/image/panda.jpg").toFile());
+        var img = ImageIO.read(Path.of("deep/src/test/resources/data/image/panda.jpg").toFile());
 
         // warm up AWT
         var resized = t.resize(img, 384, Image.SCALE_FAST);
